--- a/style.css
+++ b/style.css
@@ -155,6 +155,10 @@ h1.header.txt{
   margin: 0 auto;
   align-items: center;
   justify-content: center;
+
+  position: absolute;
+  left: 5vw;
+  bottom: 20vh;
 }
 
 
@@ -240,39 +244,180 @@ img.btn-icon{
     border-radius: 4px;
     display:flex;
     flex-wrap: wrap;
-    /* margin: auto; */
-    /* box-sizing: border-box; */
+    margin: auto;
+    box-sizing: border-box;
 }
 
 .pixel{
-  border: #8e8f8f 1px solid;
+  /* border: #8e8f8f 1px solid; */
+  /* border-radius: 2px; */
+  box-sizing: border-box;
+
 }
 
+/* /////////////////////Under pad////////////////////////// */
 
-
-
-
-/* .container{
-    background-color: bisque;
-    width: 20em;
-    height: 20em;
-    /* border: 1px black solid; */
-    border-radius: 4px;
-    display:flex;
-    flex-wrap: wrap;
-    margin: auto;
-    /* box-sizing: border-box; */
-} */
-
-div{
-    /* width: 6.25%;  */
-    /* height:6.25%; */
-    border-radius: 2px;
-    box-sizing: border-box;
-    border: 0.01em #e7e7e7 solid;
-    background-color: aliceblue;   
+.under-pad{
+  display: flex;
+  width: 16em;
+  align-items: center;
 }
 
-div.color{
-    background-color: black;
-} 
+.size-display{
+  /* background-color: #DFEDF4; */
+  width: max-content;
+}
+
+.btn.grid.active{
+  opacity: 0.3;
+}
+
+/* /////////////////////Input range///////////////////////////////////////////////// */
+
+/* ////////////////////////Remove Default////////////////////////////////// */
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
+
+/* ////////////////////////////////////////////////////////// */
+
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 18px 0;
+  width: 100%;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #3071a9;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -14px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #367ebd;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #3071a9;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #2a6495;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #3071a9;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #3071a9;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #367ebd;
+}
+
+.input-range{
+  display: flex;
+  align-items: center;
+}
+
+.label{
+  width: 100px;
+  margin-left: 0.5em;
+  box-sizing: border-box;
+}
+
+/* ////////////////////////////////Footer///////////////////////////// */
+
+.footer.container{
+  background-color: #EC8C76;
+  border-radius: 100px;
+  padding: 0%;
+  margin-top:1em;
+  width: 60%;
+  /* max-width: 250px; */
+  margin: 0 auto;
+
+  position: fixed;
+  bottom: 1vh;
+  right: 20vw
+}
+
+h1.footer.txt{
+  font-size: 0.7rem;
+  font-weight: bold;
+  font-family: 'Dancing Script', cursive;
+  color: #563838;
+  text-align: center;
+}
